lesson 3: replace string formatted method with String.format() in CustomLinkedList